syntax = "proto3";

package pb;
option go_package = "./;pb";

//block_offset
message BlockOffset{
    bytes key = 1;
    uint32 offset =2;
    uint32 len = 3;
}
//index_data
message TableIndex{
    repeated BlockOffset offsets = 1;
    bytes bloomFilter = 2;
    uint64 maxVersion = 3;
    uint32 keyCount = 4;
    uint32 staleDataSize = 5;
}

message ManifestChangeSet{
    repeated ManifestChange changes = 1;
}

//ManifestChange
message ManifestChange{
    enum Operation{
        CREATE = 0;
        DELETE = 1;
    }
    
    uint64 Id = 1;
    Operation Op = 2;
    uint32 Level = 3;
    bytes Checksum = 4;
}